# rapidxml-wrapper

./: .gitignore  .gitmodules  Makefile.am  configure.ac
assets/: Makefile.am  example.conf.in  valgrind.supp
build-aux/: SUPPORT_EMAIL  astyle.mk  data_common.mk  gcov.mk  source_common.mk  test_common.mk  version.mk
doc/: Makefile.am
doc/wt/patches/rapidxml/: 002-utf8-validation-from-wt.patch  003-xhtml-entity-expansion-from-wt.patch
m4/: astyle.m4  ax_boost_base.m4  ax_pthread.m4  fuma_ax_astyle.m4  fuma_ax_cannonical_host.m4  fuma_ax_ccache.m4  fuma_ax_debug.m4  fuma_ax_programs.m4  fuma_ax_types.m4  gcov.m4
project/: NAME
scripts/: configure.sh  regen_headers.sh  regen_libs.sh  run.sh  valgrind.sh
sources/: Makefile.am
sources/include/: Makefile.am
sources/include/node/: DOMTree.hpp  Element.hpp  Makefile.am  QualifiedName.hpp  Type.hpp  Util.hpp  VisitableBase.hpp  XML.hpp  xml_s3.hpp
sources/include/rapidxml/: Makefile.am  rapidxml.hpp  rapidxml_xhtml.hpp
sources/lib/: Makefile.am
sources/lib/node/: DOMTree.cpp  Element.cpp  Makefile.am  QualifiedName.cpp  Util.cpp  XML.cpp  a.out  xml_s3.cpp
sources/src/: Main.cpp  Makefile.am
tests/: Makefile.am
tests/include/: Makefile.am  TestHelper.hpp  test_node_type.cpp
tests/lib/: Makefile.am  test_qualified_name.cpp
tests/src/: Makefile.am  test_build.cpp  test_parser.cpp
